--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -58,11 +58,12 @@ mp.messaging.outgoing.outgoing-testevent.ssl.truststore.type=${SSL_TRUSTTORE_TYP
 
 mp.messaging.incoming.incoming-appaccepted.connector=smallrye-kafka
 mp.messaging.incoming.incoming-appaccepted.topic=${APP_ACCEPTED_EVENT_TOPIC}
-mp.messaging.incoming.incoming-appaccepted.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
+mp.messaging.incoming.incoming-appaccepted.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-appaccepted.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-appaccepted.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.incoming.incoming-appaccepted.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.incoming.smallrye-appaccepted.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-appaccepted.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+#mp.messaging.incoming.smallrye-appaccepted.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.incoming.incoming-appaccepted.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.incoming.incoming-appaccepted.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.incoming.incoming-appaccepted.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
@@ -95,11 +96,11 @@ mp.messaging.outgoing.outgoing-app_accepted_decoded.ssl.truststore.type=${SSL_TR
 
 mp.messaging.incoming.incoming-disclosuresent.connector=smallrye-kafka
 mp.messaging.incoming.incoming-disclosuresent.topic=${DISCLOSURE_EVENT_TOPIC}
-mp.messaging.incoming.incoming-disclosuresent.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
+mp.messaging.incoming.incoming-disclosuresent.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-disclosuresent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-disclosuresent.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.incoming.incoming-disclosuresent.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.incoming.smallrye-disclosuresent.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-disclosuresent.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.incoming.incoming-disclosuresent.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.incoming.incoming-disclosuresent.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.incoming.incoming-disclosuresent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
@@ -131,11 +132,11 @@ mp.messaging.outgoing.outgoing-disclosure_sent_decoded.ssl.truststore.type=${SSL
 
 mp.messaging.incoming.incoming-evidencesubmit.connector=smallrye-kafka
 mp.messaging.incoming.incoming-evidencesubmit.topic=${EVSUBMITTED_EVENT_TOPIC}
-mp.messaging.incoming.incoming-evidencesubmit.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
+mp.messaging.incoming.incoming-evidencesubmit.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.incoming.smallrye-evidencesubmit.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-evidencesubmit.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.incoming.incoming-evidencesubmit.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.incoming.incoming-evidencesubmit.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.incoming.incoming-evidencesubmit.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
@@ -169,11 +170,11 @@ mp.messaging.outgoing.outgoing-evidence_submitted_decoded.ssl.truststore.type=${
 
 mp.messaging.incoming.incoming-payreceived.connector=smallrye-kafka
 mp.messaging.incoming.incoming-payreceived.topic=${PAYRECVD_EVENT_TOPIC}
-mp.messaging.incoming.incoming-payreceived.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
+mp.messaging.incoming.incoming-payreceived.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.incoming.smallrye-payreceived.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-payreceived.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.incoming.incoming-payreceived.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.incoming.incoming-payreceived.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.incoming.incoming-payreceived.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
@@ -207,11 +208,11 @@ mp.messaging.outgoing.outgoing-payment_received_decoded.ssl.truststore.type=${SS
 
 mp.messaging.incoming.incoming-reviewscheduled.connector=smallrye-kafka
 mp.messaging.incoming.incoming-reviewscheduled.topic=${REVSCHED_EVENT_TOPIC}
-mp.messaging.incoming.incoming-reviewscheduled.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
+mp.messaging.incoming.incoming-reviewscheduled.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.incoming.smallrye-reviewscheduled.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-reviewscheduled.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.incoming.incoming-reviewscheduled.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.incoming.incoming-reviewscheduled.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.incoming.incoming-reviewscheduled.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
