--- a/event-consumer-module/Dockerfile.multistage
+++ b/event-consumer-module/Dockerfile.multistage
@@ -1,6 +1,7 @@
 FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-builder-image:1.0 AS build
 USER root
 # RUN microdnf install findutils
+RUN ls -a
 COPY --chown=quarkus:quarkus ./gradlew /code/gradlew
 COPY --chown=quarkus:quarkus ./gradle /code/gradle
 COPY --chown=quarkus:quarkus ./build.gradle /code/
