--- a/.github/workflows/build_push_pr_onopen_devdeploy.yml
+++ b/.github/workflows/build_push_pr_onopen_devdeploy.yml
@@ -55,7 +55,7 @@ jobs:
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       - name: Create Secrets
         run: |
-          cd openshift
+          cd event-consumer-module/openshift
           oc process -f consumer-module-build-secret.yml --param VERSION=${{ env.APP_VERSION }} --param NAMESPACE=${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools --param APP_ACCEPTED_EVENT_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_TOPIC }} --param TEST_EVENT_TOPIC=${{ secrets.TEST_EVENT_TOPIC }} --param DISCLOSURE_EVENT_TOPIC=${{ secrets.DISCLOSURE_EVENT_TOPIC }} --param EVSUBMITTED_EVENT_TOPIC=${{ secrets.EVSUBMITTED_EVENT_TOPIC }} --param IMAGE_NAMESPACE=${{ secrets.IMAGE_NAMESPACE }} --param IMAGE_REGISTRY=${{ secrets.IMAGE_REGISTRY }} --param KAFKA_SASL_CONFIG="${{ secrets.KAFKA_SASL_CONFIG }}" --param KAFKA_SASL_MECH=${{ secrets.KAFKA_SASL_MECH }} --param KAFKA_SCHEMA_REGISTRY=${{ secrets.KAFKA_SCHEMA_REGISTRY }} --param KAFKA_SEC_PROTOCOL=${{ secrets.KAFKA_SEC_PROTOCOL }} --param KAFKA_SERVER=${{ secrets.KAFKA_SERVER }} --param PAYRECVD_EVENT_TOPIC=${{ secrets.PAYRECVD_EVENT_TOPIC }} --param REVSCHED_EVENT_TOPIC=${{ secrets.REVSCHED_EVENT_TOPIC }} --param SSL_PROTOCOL=${{ secrets.SSL_PROTOCOL }} --param SSL_TRUSTSTORE=${{ secrets.SSL_TRUSTSTORE }} --param SSL_TRUSTTORE_PASS=${{ secrets.SSL_TRUSTTORE_PASS }} --param SSL_TRUSTTORE_TYPE=${{ secrets.SSL_TRUSTTORE_TYPE }} --param APP_ACCEPTED_EVENT_DECODED_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_DECODED_TOPIC }} --param DISCLOSURE_EVENT_DECODED_TOPIC=${{ secrets.DISCLOSURE_EVENT_DECODED_TOPIC }} --param EVSUBMITTED_EVENT_DECODED_TOPIC=${{ secrets.EVSUBMITTED_EVENT_DECODED_TOPIC }} --param PAYRECVD_EVENT_DECODED_TOPIC=${{ secrets.PAYRECVD_EVENT_DECODED_TOPIC }} --param REVSCHED_EVENT_DECODED_TOPIC=${{ secrets.REVSCHED_EVENT_DECODED_TOPIC }} | oc apply -f -
       - name: Authenticate and set context for dev get cluster ca
         uses: redhat-actions/oc-login@v1.1.2
@@ -101,7 +101,7 @@ jobs:
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       - name: Apply Build Yaml
         run: |
-          cd openshift
+          cd event-consumer-module/openshift
           oc process -f consumer-module-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_consumer_devdeploy/pr-${{ env.PR_NUMBER }} --param-file consumer-module-build-dev-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
           
       - name: Start the build and push
