--- a/event-consumer-module/Dockerfile.multistage
+++ b/event-consumer-module/Dockerfile.multistage
@@ -2,8 +2,8 @@ FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-build
 USER root
 # RUN microdnf install findutils
 RUN ls -a
-COPY . /code/
-RUN ls /code
+COPY ./ /code/
+RUN ls -a /code/
 COPY --chown=quarkus:quarkus ./gradlew /code/gradlew
 COPY --chown=quarkus:quarkus ./gradle /code/gradle
 COPY --chown=quarkus:quarkus ./build.gradle /code/
