--- a/event-consumer-module/.dockerignore
+++ b/event-consumer-module/.dockerignore
@@ -1,5 +1,7 @@
-*
-!build/*-runner
-!build/*-runner.jar
-!build/lib/*
-!build/quarkus-app/*
+# *
+# !build/*-runner
+# !build/*-runner.jar
+# !build/lib/*
+# !build/quarkus-app/*
+
+.run
