--- a/event-consumer-module/openshift/consumer-module-build-secret.yml
+++ b/event-consumer-module/openshift/consumer-module-build-secret.yml
@@ -44,6 +44,7 @@ objects:
       EVSUBMITTED_EVENT_DECODED_TOPIC: ${EVSUBMITTED_EVENT_DECODED_TOPIC}
       PAYRECVD_EVENT_DECODED_TOPIC: ${PAYRECVD_EVENT_DECODED_TOPIC}
       REVSCHED_EVENT_DECODED_TOPIC: ${REVSCHED_EVENT_DECODED_TOPIC}
+      TEST_EVENT_SINK_TOPIC: ${TEST_EVENT_SINK_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -77,3 +78,4 @@ parameters:
   - name: EVSUBMITTED_EVENT_DECODED_TOPIC
   - name: PAYRECVD_EVENT_DECODED_TOPIC
   - name: REVSCHED_EVENT_DECODED_TOPIC
+  - name: TEST_EVENT_SINK_TOPIC
