--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -24,6 +24,7 @@ kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
 
 mp.messaging.incoming.incoming-testevent.connector=smallrye-kafka
 mp.messaging.incoming.incoming-testevent.topic=${TEST_EVENT_TOPIC}
+mp.messaging.incoming.incoming-testevent.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-testevent.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-testevent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-testevent.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
@@ -58,6 +59,7 @@ mp.messaging.outgoing.outgoing-testevent.ssl.truststore.type=${SSL_TRUSTTORE_TYP
 
 mp.messaging.incoming.incoming-appaccepted.connector=smallrye-kafka
 mp.messaging.incoming.incoming-appaccepted.topic=${APP_ACCEPTED_EVENT_TOPIC}
+mp.messaging.incoming.incoming-appaccepted.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-appaccepted.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-appaccepted.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-appaccepted.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
@@ -96,6 +98,7 @@ mp.messaging.outgoing.outgoing-app_accepted_decoded.ssl.truststore.type=${SSL_TR
 
 mp.messaging.incoming.incoming-disclosuresent.connector=smallrye-kafka
 mp.messaging.incoming.incoming-disclosuresent.topic=${DISCLOSURE_EVENT_TOPIC}
+mp.messaging.incoming.incoming-disclosuresent.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-disclosuresent.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-disclosuresent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-disclosuresent.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
@@ -132,6 +135,7 @@ mp.messaging.outgoing.outgoing-disclosure_sent_decoded.ssl.truststore.type=${SSL
 
 mp.messaging.incoming.incoming-evidencesubmit.connector=smallrye-kafka
 mp.messaging.incoming.incoming-evidencesubmit.topic=${EVSUBMITTED_EVENT_TOPIC}
+mp.messaging.incoming.incoming-evidencesubmit.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-evidencesubmit.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
@@ -170,6 +174,7 @@ mp.messaging.outgoing.outgoing-evidence_submitted_decoded.ssl.truststore.type=${
 
 mp.messaging.incoming.incoming-payreceived.connector=smallrye-kafka
 mp.messaging.incoming.incoming-payreceived.topic=${PAYRECVD_EVENT_TOPIC}
+mp.messaging.incoming.incoming-payreceived.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-payreceived.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
@@ -208,6 +213,7 @@ mp.messaging.outgoing.outgoing-payment_received_decoded.ssl.truststore.type=${SS
 
 mp.messaging.incoming.incoming-reviewscheduled.connector=smallrye-kafka
 mp.messaging.incoming.incoming-reviewscheduled.topic=${REVSCHED_EVENT_TOPIC}
+mp.messaging.incoming.incoming-reviewscheduled.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-reviewscheduled.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
