--- a/.github/workflows/build_push_pr_onopen_testdeploy.yml
+++ b/.github/workflows/build_push_pr_onopen_testdeploy.yml
@@ -57,11 +57,11 @@ jobs:
         run: |
           cd event-consumer-module/openshift
           oc process -f consumer-module-build-secret.yml --param VERSION=${{ env.APP_VERSION }} --param NAMESPACE=${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools --param APP_ACCEPTED_EVENT_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_TOPIC }} --param TEST_EVENT_TOPIC=${{ secrets.TEST_EVENT_TOPIC }} --param DISCLOSURE_EVENT_TOPIC=${{ secrets.DISCLOSURE_EVENT_TOPIC }} --param EVSUBMITTED_EVENT_TOPIC=${{ secrets.EVSUBMITTED_EVENT_TOPIC }} --param IMAGE_NAMESPACE=${{ secrets.IMAGE_NAMESPACE }} --param IMAGE_REGISTRY=${{ secrets.IMAGE_REGISTRY }} --param KAFKA_SASL_CONFIG="${{ secrets.KAFKA_SASL_CONFIG }}" --param KAFKA_SASL_MECH=${{ secrets.KAFKA_SASL_MECH }} --param KAFKA_SCHEMA_REGISTRY=${{ secrets.KAFKA_SCHEMA_REGISTRY }} --param KAFKA_SEC_PROTOCOL=${{ secrets.KAFKA_SEC_PROTOCOL }} --param KAFKA_SERVER=${{ secrets.KAFKA_SERVER }} --param PAYRECVD_EVENT_TOPIC=${{ secrets.PAYRECVD_EVENT_TOPIC }} --param REVSCHED_EVENT_TOPIC=${{ secrets.REVSCHED_EVENT_TOPIC }} --param SSL_PROTOCOL=${{ secrets.SSL_PROTOCOL }} --param SSL_TRUSTSTORE=${{ secrets.SSL_TRUSTSTORE }} --param SSL_TRUSTTORE_PASS=${{ secrets.SSL_TRUSTTORE_PASS }} --param SSL_TRUSTTORE_TYPE=${{ secrets.SSL_TRUSTTORE_TYPE }} --param APP_ACCEPTED_EVENT_DECODED_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_DECODED_TOPIC }} --param DISCLOSURE_EVENT_DECODED_TOPIC=${{ secrets.DISCLOSURE_EVENT_DECODED_TOPIC }} --param EVSUBMITTED_EVENT_DECODED_TOPIC=${{ secrets.EVSUBMITTED_EVENT_DECODED_TOPIC }} --param PAYRECVD_EVENT_DECODED_TOPIC=${{ secrets.PAYRECVD_EVENT_DECODED_TOPIC }} --param REVSCHED_EVENT_DECODED_TOPIC=${{ secrets.REVSCHED_EVENT_DECODED_TOPIC }} --param TEST_EVENT_SINK_TOPIC=${{ secrets.TEST_EVENT_SINK_TOPIC }} | oc apply -f -
-      - name: Authenticate and set context for dev get cluster ca
+      - name: Authenticate and set context for test get cluster ca
         uses: redhat-actions/oc-login@v1.1.2
         with:
           openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_DEV }}
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_TEST }}
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-test"
       - name: Get Cluster ca secret for build
         run: |
