--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -22,11 +22,24 @@ kafka.bootstrap.servers=${KAFKA_SERVER}
 kafka.security.protocol=${KAFKA_SEC_PROTOCOL}
 kafka.sasl.mechanism=${KAFKA_SASL_MECH}
 kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
-kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
+#kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-kafka.schema.registry.url=${REGISTRY_2}
 
 quarkus.mongodb.connection-string = ${MONGO_CONN_STR}
 quarkus.mongodb.database = ${AUTH_DB_NAME}
 
+# Configuring New Test event channel
+
+mp.messaging.outgoing.outgoing-newtestevent.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-newtestevent.topic=${TEST_EVENT_TOPIC_1}
+mp.messaging.outgoing.outgoing-newtestevent.value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+mp.messaging.connector.smallrye-kafka.apicurio.registry.url=${REGISTRY_2}
+mp.messaging.outgoing.outgoing-newtestevent.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-newtestevent.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-newtestevent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-newtestevent.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-newtestevent.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-newtestevent.apicurio.registry.use-id=6
 
 # Configuring Test event channel
 
@@ -36,7 +49,7 @@ mp.messaging.outgoing.outgoing-testevent.value.serializer=io.apicurio.registry.u
 mp.messaging.outgoing.outgoing-testevent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.outgoing.outgoing-testevent.apicurio.registry.global-id=io.apicurio.registry.utils.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.outgoing.outgoing-testevent.apicurio.registry.avro-datum-provider=io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider
-mp.messaging.connector.smallrye-kafka.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+#mp.messaging.connector.smallrye-kafka.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
 mp.messaging.outgoing.outgoing-testevent.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-testevent.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-testevent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
