--- a/rsbc-ride-producer-api/build.gradle
+++ b/rsbc-ride-producer-api/build.gradle
@@ -6,6 +6,9 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
+    maven {
+        url "https://packages.confluent.io/maven/"
+    }
 }
 
 dependencies {
@@ -23,6 +26,11 @@ dependencies {
     implementation 'io.apicurio:apicurio-registry-utils-serde:1.3.2.Final'
     implementation 'io.quarkus:quarkus-smallrye-openapi:3.0.0.Alpha1'
     implementation 'io.quarkus:quarkus-mongodb-panache:2.14.0.Final'
+
+//    To support Confluent registry schema formats
+    implementation 'io.confluent:kafka-avro-serializer:7.0.1'
+    implementation 'io.quarkus:quarkus-confluent-registry-avro:2.10.2.Final'
+    implementation 'io.quarkus:quarkus-rest-client-reactive:2.10.2.Final'
 
     // implementation group: 'io.quarkus', name: 'quarkus-vertx-http', version: '2.14.1.Final'
 
