--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -72,4 +72,4 @@ parameters:
   - name: TEST_EVENT_TOPIC
   - name: AUTH_DB_NAME
   - name: MONGO_CONN_STR
-  - nanme: KAFKA_CONFLUENT_COMPAT_REGISTRY
+  - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
