--- a/event-consumer-module/openshift/consumer-module-build-secret.yml
+++ b/event-consumer-module/openshift/consumer-module-build-secret.yml
@@ -45,6 +45,7 @@ objects:
       PAYRECVD_EVENT_DECODED_TOPIC: ${PAYRECVD_EVENT_DECODED_TOPIC}
       REVSCHED_EVENT_DECODED_TOPIC: ${REVSCHED_EVENT_DECODED_TOPIC}
       TEST_EVENT_SINK_TOPIC: ${TEST_EVENT_SINK_TOPIC}
+      KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -79,3 +80,4 @@ parameters:
   - name: PAYRECVD_EVENT_DECODED_TOPIC
   - name: REVSCHED_EVENT_DECODED_TOPIC
   - name: TEST_EVENT_SINK_TOPIC
+  - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
