--- a/event-consumer-module/openshift/consumer-module-build.yml
+++ b/event-consumer-module/openshift/consumer-module-build.yml
@@ -159,6 +159,11 @@ objects:
               secretKeyRef:
                 key: TEST_EVENT_SINK_TOPIC
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
+              valueFrom:
+                secretKeyRef:
+                  key: KAFKA_CONFLUENT_COMPAT_REGISTRY
+                  name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
       output:
         to:
