--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -26,6 +26,7 @@ mp.messaging.connector.smallrye-kafka.schema.registry.url=${KAFKA_CONFLUENT_COMP
 # Configuring Test event channel
 
 mp.messaging.incoming.incoming-testevent.connector=smallrye-kafka
+mp.messaging.incoming.incoming-testevent.commit-strategy=throttled
 mp.messaging.incoming.incoming-testevent.topic=${TEST_EVENT_TOPIC}
 mp.messaging.incoming.incoming-testevent.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-testevent.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -57,6 +58,7 @@ mp.messaging.outgoing.outgoing-testevent.ssl.truststore.type=${SSL_TRUSTTORE_TYP
 # Configuring incoming app_accepted event channel
 
 mp.messaging.incoming.incoming-appaccepted.connector=smallrye-kafka
+mp.messaging.incoming.incoming-appaccepted.commit-strategy=throttled
 mp.messaging.incoming.incoming-appaccepted.topic=${APP_ACCEPTED_EVENT_TOPIC}
 mp.messaging.incoming.incoming-appaccepted.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-appaccepted.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -91,6 +93,7 @@ mp.messaging.outgoing.outgoing-app_accepted_decoded.ssl.truststore.type=${SSL_TR
 # Configuring incoming disclosure_sent event channel
 
 mp.messaging.incoming.incoming-disclosuresent.connector=smallrye-kafka
+mp.messaging.incoming.incoming-disclosuresent.commit-strategy=throttled
 mp.messaging.incoming.incoming-disclosuresent.topic=${DISCLOSURE_EVENT_TOPIC}
 mp.messaging.incoming.incoming-disclosuresent.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-disclosuresent.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -124,6 +127,7 @@ mp.messaging.outgoing.outgoing-disclosure_sent_decoded.ssl.truststore.type=${SSL
 # Configuring incoming evidence_submitted event channel
 
 mp.messaging.incoming.incoming-evidencesubmit.connector=smallrye-kafka
+mp.messaging.incoming.incoming-evidencesubmit.commit-strategy=throttled
 mp.messaging.incoming.incoming-evidencesubmit.topic=${EVSUBMITTED_EVENT_TOPIC}
 mp.messaging.incoming.incoming-evidencesubmit.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-evidencesubmit.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -159,6 +163,7 @@ mp.messaging.outgoing.outgoing-evidence_submitted_decoded.ssl.truststore.type=${
 # Configuring incoming payment_received event channel
 
 mp.messaging.incoming.incoming-payreceived.connector=smallrye-kafka
+mp.messaging.incoming.incoming-payreceived.commit-strategy=throttled
 mp.messaging.incoming.incoming-payreceived.topic=${PAYRECVD_EVENT_TOPIC}
 mp.messaging.incoming.incoming-payreceived.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-payreceived.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -194,6 +199,7 @@ mp.messaging.outgoing.outgoing-payment_received_decoded.ssl.truststore.type=${SS
 # Configuring incoming review_scheduled event channel
 
 mp.messaging.incoming.incoming-reviewscheduled.connector=smallrye-kafka
+mp.messaging.incoming.incoming-reviewscheduled.commit-strategy=throttled
 mp.messaging.incoming.incoming-reviewscheduled.topic=${REVSCHED_EVENT_TOPIC}
 mp.messaging.incoming.incoming-reviewscheduled.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 mp.messaging.incoming.incoming-reviewscheduled.value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
