--- a/.github/workflows/build_push_pr_onopen_proddeploy.yml
+++ b/.github/workflows/build_push_pr_onopen_proddeploy.yml
@@ -1,4 +1,4 @@
-name: Build, Push and deploy PR from release branch to testbranch(Deploy Consumer Module to Test)
+name: Build, Push and deploy PR from release branch to testbranch(Deploy Consumer Module to PROD)
 on:
   pull_request:
     types: [opened, reopened,edited,synchronize]
@@ -41,9 +41,9 @@ jobs:
     name: Create Env secret
     runs-on: ubuntu-latest
     needs: merge_pr_local
-    environment: test
+    environment: prod
     env:
-      APP_VERSION: "test"
+      APP_VERSION: "prod"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3      
@@ -57,12 +57,12 @@ jobs:
         run: |
           cd event-consumer-module/openshift
           oc process -f consumer-module-build-secret.yml --param VERSION=${{ env.APP_VERSION }} --param NAMESPACE=${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools --param APP_ACCEPTED_EVENT_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_TOPIC }} --param TEST_EVENT_TOPIC=${{ secrets.TEST_EVENT_TOPIC }} --param DISCLOSURE_EVENT_TOPIC=${{ secrets.DISCLOSURE_EVENT_TOPIC }} --param EVSUBMITTED_EVENT_TOPIC=${{ secrets.EVSUBMITTED_EVENT_TOPIC }} --param IMAGE_NAMESPACE=${{ secrets.IMAGE_NAMESPACE }} --param IMAGE_REGISTRY=${{ secrets.IMAGE_REGISTRY }} --param KAFKA_SASL_CONFIG="${{ secrets.KAFKA_SASL_CONFIG }}" --param KAFKA_SASL_MECH=${{ secrets.KAFKA_SASL_MECH }} --param KAFKA_SCHEMA_REGISTRY=${{ secrets.KAFKA_SCHEMA_REGISTRY }} --param KAFKA_SEC_PROTOCOL=${{ secrets.KAFKA_SEC_PROTOCOL }} --param KAFKA_SERVER=${{ secrets.KAFKA_SERVER }} --param PAYRECVD_EVENT_TOPIC=${{ secrets.PAYRECVD_EVENT_TOPIC }} --param REVSCHED_EVENT_TOPIC=${{ secrets.REVSCHED_EVENT_TOPIC }} --param SSL_PROTOCOL=${{ secrets.SSL_PROTOCOL }} --param SSL_TRUSTSTORE=${{ secrets.SSL_TRUSTSTORE }} --param SSL_TRUSTTORE_PASS=${{ secrets.SSL_TRUSTTORE_PASS }} --param SSL_TRUSTTORE_TYPE=${{ secrets.SSL_TRUSTTORE_TYPE }} --param APP_ACCEPTED_EVENT_DECODED_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_DECODED_TOPIC }} --param DISCLOSURE_EVENT_DECODED_TOPIC=${{ secrets.DISCLOSURE_EVENT_DECODED_TOPIC }} --param EVSUBMITTED_EVENT_DECODED_TOPIC=${{ secrets.EVSUBMITTED_EVENT_DECODED_TOPIC }} --param PAYRECVD_EVENT_DECODED_TOPIC=${{ secrets.PAYRECVD_EVENT_DECODED_TOPIC }} --param REVSCHED_EVENT_DECODED_TOPIC=${{ secrets.REVSCHED_EVENT_DECODED_TOPIC }} --param TEST_EVENT_SINK_TOPIC=${{ secrets.TEST_EVENT_SINK_TOPIC }} --param KAFKA_CONFLUENT_COMPAT_REGISTRY="${{ secrets.KAFKA_CONFLUENT_COMPAT_REGISTRY }}" | oc apply -f -
-      - name: Authenticate and set context for test get cluster ca
+      - name: Authenticate and set context for prod get cluster ca
         uses: redhat-actions/oc-login@v1.1.2
         with:
           openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_TEST }}
-          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-test"
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_PROD }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-prod"
       - name: Get Cluster ca secret for build
         run: |
           oc get secret ${{ secrets.CLUSTER_CA_SECRET_NAME }} -o jsonpath='{.data.ca\.p12}' | base64 -d -i > ca.p12
@@ -80,10 +80,10 @@ jobs:
   build_push:
     name: Build and Push the image
     runs-on: ubuntu-latest
-    environment: test
+    environment: prod
     needs: [merge_pr_local,create_env_secrets]
     env:
-      build_config_name: "ride-consumer-module-build-test"
+      build_config_name: "ride-consumer-module-build-prod"
       PR_NUMBER: ${{ github.event.number }}
       # base_image_tag: "1"
       # PR_NUMBER: ${{ github.event.number }}
@@ -102,7 +102,7 @@ jobs:
       - name: Apply Build Yaml
         run: |
           cd event-consumer-module/openshift
-          oc process -f consumer-module-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_consumer_testdeploy/pr-${{ env.PR_NUMBER }} --param-file consumer-module-build-test-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
+          oc process -f consumer-module-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_consumer_testdeploy/pr-${{ env.PR_NUMBER }} --param-file consumer-module-build-prod-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
           
       - name: Start the build and push
         run: |
@@ -120,8 +120,8 @@ jobs:
 
 
 
-  deploy_dev_argocd:
-    name: Push to Gitops repo for test deployment via Argocd
+  deploy_prod_argocd:
+    name: Push to Gitops repo for prod deployment via Argocd
     runs-on: ubuntu-latest
     needs: [merge_pr_local,create_env_secrets,build_push]
     env:
@@ -145,7 +145,7 @@ jobs:
       - name: Update Image tag for Dev deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/test/kustomization.yaml'
+          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/prod/kustomization.yaml'
       # - name: Update name suffix for Dev deploy
       #   uses: mikefarah/yq@v4.28.1
       #   with:
@@ -161,7 +161,7 @@ jobs:
       - name: Update release name for Dev deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/test/kustomization.yaml'
+          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/prod/kustomization.yaml'
       # - name: Update hpa Dev name
       #   uses: mikefarah/yq@v4.28.1
       #   with:
@@ -169,15 +169,15 @@ jobs:
       - name: Update sha annotation
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/test/kustomization.yaml'
+          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/prod/kustomization.yaml'
       - name: Check Changed value
         run: |
-          cat overlays/dev/kustomization.yaml
+          cat overlays/prod/kustomization.yaml
       - name: Push Changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "updated test deploy details to test overlay yaml"
+          git commit -m "updated prod deploy details to prod overlay yaml"
           git push -u origin deployment/rsbc-ride-consumer-module
         
