--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -31,6 +31,19 @@ quarkus.mongodb.connection-string = ${MONGO_CONN_STR}
 quarkus.mongodb.database = ${AUTH_DB_NAME}
 
 
+# Configuring etk Test event channel
+
+mp.messaging.outgoing.outgoing-etktestevent.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-etktestevent.topic=${ETK_TEST_EVENT}
+mp.messaging.outgoing.outgoing-etktestevent.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-etktestevent.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+#mp.messaging.connector.smallrye-kafka.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+mp.messaging.outgoing.outgoing-etktestevent.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-etktestevent.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-etktestevent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-etktestevent.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+#mp.messaging.outgoing.outgoing-testevent.specific.avro.reader=true
+
 
 # Configuring Test event channel
 
