added etk schemas

--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -42,6 +42,10 @@ objects:
       MONGO_CONN_STR: ${MONGO_CONN_STR}
       AUTH_DB_NAME: ${AUTH_DB_NAME}
       KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+      ISSUANCE_EVENT_TOPIC: ${ISSUANCE_EVENT_TOPIC}
+      PAYMENT_EVENT_TOPIC: ${PAYMENT_EVENT_TOPIC}
+      DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
+      DISPUTE_UPDATE_EVENT_TOPIC: ${DISPUTE_UPDATE_EVENT_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -73,3 +77,7 @@ parameters:
   - name: AUTH_DB_NAME
   - name: MONGO_CONN_STR
   - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
+  - name: ISSUANCE_EVENT_TOPIC
+  - name: PAYMENT_EVENT_TOPIC
+  - name: DISPUTE_EVENT_TOPIC
+  - name: DISPUTE_UPDATE_EVENT_TOPIC
