--- a/event-consumer-module/openshift/consumer-module-build-secret.yml
+++ b/event-consumer-module/openshift/consumer-module-build-secret.yml
@@ -46,6 +46,14 @@ objects:
       REVSCHED_EVENT_DECODED_TOPIC: ${REVSCHED_EVENT_DECODED_TOPIC}
       TEST_EVENT_SINK_TOPIC: ${TEST_EVENT_SINK_TOPIC}
       KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+      ISSUANCE_EVENT_TOPIC: ${ISSUANCE_EVENT_TOPIC}
+      PAYMENT_EVENT_TOPIC: ${PAYMENT_EVENT_TOPIC}
+      DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
+      DISPUTE_UPDATE_EVENT_TOPIC: ${DISPUTE_UPDATE_EVENT_TOPIC}
+      DISPUTE_EVENT_DECODED_TOPIC: ${DISPUTE_EVENT_DECODED_TOPIC}
+      DISPUTE_UPDATE_EVENT_DECODED_TOPIC: ${DISPUTE_UPDATE_EVENT_DECODED_TOPIC}
+      ISSUANCE_EVENT_DECODED_TOPIC: ${ISSUANCE_EVENT_DECODED_TOPIC}
+      PAYMENT_EVENT_DECODED_TOPIC: ${PAYMENT_EVENT_DECODED_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -81,3 +89,11 @@ parameters:
   - name: REVSCHED_EVENT_DECODED_TOPIC
   - name: TEST_EVENT_SINK_TOPIC
   - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
+  - name: ISSUANCE_EVENT_TOPIC
+  - name: PAYMENT_EVENT_TOPIC
+  - name: DISPUTE_EVENT_TOPIC
+  - name: DISPUTE_UPDATE_EVENT_TOPIC
+  - name: DISPUTE_EVENT_DECODED_TOPIC
+  - name: DISPUTE_UPDATE_EVENT_DECODED_TOPIC
+  - name: ISSUANCE_EVENT_DECODED_TOPIC
+  - name: PAYMENT_EVENT_DECODED_TOPIC
