--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -228,6 +228,129 @@ mp.messaging.outgoing.outgoing-review_scheduled_decoded.ssl.truststore.type=${SS
 
 
 
+
+#--------------------------------------------------etk config----------------------------------------------------------------
+
+# Configuring incoming issuance event channel
+mp.messaging.incoming.incoming-issuance.connector=smallrye-kafka
+mp.messaging.incoming.incoming-issuance.commit-strategy=throttled
+mp.messaging.incoming.incoming-issuance.topic=${ISSUANCE_EVENT_TOPIC}
+mp.messaging.outgoing.incoming-issuance.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.incoming-issuance.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.incoming-issuance.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.incoming.incoming-issuance.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.incoming.incoming-issuance.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.incoming.incoming-issuance.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.incoming.incoming-issuance.enable.auto.commit=false
+mp.messaging.incoming.incoming-issuance.group.id=etkissuanceGrp
+mp.messaging.incoming.incoming-issuance.partitions=10
+mp.messaging.incoming.incoming-issuance.auto.offset.reset=latest
+
+# Configuring outgoing issuance decoded event channel
+mp.messaging.outgoing.outgoing-issuance_decoded.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-issuance_decoded.topic=${ISSUANCE_EVENT_DECODED_TOPIC}
+mp.messaging.outgoing.outgoing-issuance_decoded.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-issuance_decoded.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-issuance_decoded.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-issuance_decoded.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-issuance_decoded.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-issuance_decoded.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+
+
+
+# Configuring incoming payment event channel
+mp.messaging.incoming.incoming-payment.connector=smallrye-kafka
+mp.messaging.incoming.incoming-payment.commit-strategy=throttled
+mp.messaging.incoming.incoming-payment.topic=${PAYMENT_EVENT_TOPIC}
+mp.messaging.outgoing.incoming-payment.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.incoming-payment.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.incoming-payment.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.incoming.incoming-payment.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.incoming.incoming-payment.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.incoming.incoming-payment.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.incoming.incoming-payment.enable.auto.commit=false
+mp.messaging.incoming.incoming-payment.group.id=etkpaymentGrp
+mp.messaging.incoming.incoming-payment.partitions=10
+mp.messaging.incoming.incoming-payment.auto.offset.reset=latest
+
+# Configuring outgoing payment decoded event channel
+mp.messaging.outgoing.outgoing-payment.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-payment.topic=${PAYMENT_EVENT_DECODED_TOPIC}
+mp.messaging.outgoing.outgoing-payment.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-payment.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-payment.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-payment.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-payment.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-payment.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+
+
+
+
+
+# Configuring incoming dispute event channel
+mp.messaging.incoming.incoming-dispute.connector=smallrye-kafka
+mp.messaging.incoming.incoming-dispute.commit-strategy=throttled
+mp.messaging.incoming.incoming-dispute.topic=${DISPUTE_EVENT_TOPIC}
+mp.messaging.outgoing.incoming-dispute.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.incoming-dispute.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.incoming-dispute.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.incoming.incoming-dispute.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.incoming.incoming-dispute.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.incoming.incoming-dispute.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.incoming.incoming-dispute.enable.auto.commit=false
+mp.messaging.incoming.incoming-dispute.group.id=etkdisputeGrp
+mp.messaging.incoming.incoming-dispute.partitions=10
+mp.messaging.incoming.incoming-dispute.auto.offset.reset=latest
+
+# Configuring outgoing dispute decoded event channel
+mp.messaging.outgoing.outgoing-dispute.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-dispute.topic=${DISPUTE_EVENT_DECODED_TOPIC}
+mp.messaging.outgoing.outgoing-dispute.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-dispute.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-dispute.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-dispute.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-dispute.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-dispute.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+
+
+
+
+# Configuring incoming disputeupdate event channel
+mp.messaging.incoming.incoming-disputeupdate.connector=smallrye-kafka
+mp.messaging.incoming.incoming-disputeupdate.commit-strategy=throttled
+mp.messaging.incoming.incoming-disputeupdate.topic=${DISPUTE_UPDATE_EVENT_TOPIC}
+mp.messaging.outgoing.incoming-disputeupdate.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.incoming-disputeupdate.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.incoming-disputeupdate.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.incoming.incoming-disputeupdate.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.incoming.incoming-disputeupdate.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.incoming.incoming-disputeupdate.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.incoming.incoming-disputeupdate.enable.auto.commit=false
+mp.messaging.incoming.incoming-disputeupdate.group.id=etkdisputeupdateGrp
+mp.messaging.incoming.incoming-disputeupdate.partitions=10
+mp.messaging.incoming.incoming-disputeupdate.auto.offset.reset=latest
+
+# Configuring outgoing disputeupdate decoded event channel
+mp.messaging.outgoing.outgoing-disputeupdate.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-disputeupdate.topic=${DISPUTE_UPDATE_EVENT_DECODED_TOPIC}
+mp.messaging.outgoing.outgoing-disputeupdate.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-disputeupdate.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-disputeupdate.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+
+
+
+
+
+
+
+#------------------------------------------------------------------------------------------------------
+
+
+
+
 # https://smallrye.io/smallrye-reactive-messaging/smallrye-reactive-messaging/3.1/kafka/kafka.html#kafka-installation
 
 # Configuring the incoming channel (read from Kafka)
