--- a/event-consumer-module/openshift/consumer-module-build.yml
+++ b/event-consumer-module/openshift/consumer-module-build.yml
@@ -164,6 +164,46 @@ objects:
               secretKeyRef:
                 key: KAFKA_CONFLUENT_COMPAT_REGISTRY
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: ISSUANCE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: ISSUANCE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: PAYMENT_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: PAYMENT_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_UPDATE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_UPDATE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_EVENT_DECODED_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_EVENT_DECODED_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_UPDATE_EVENT_DECODED_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_UPDATE_EVENT_DECODED_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: ISSUANCE_EVENT_DECODED_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: ISSUANCE_EVENT_DECODED_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: PAYMENT_EVENT_DECODED_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: PAYMENT_EVENT_DECODED_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
       output:
         to:
