--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -116,45 +116,70 @@ mp.messaging.outgoing.outgoing-reviewscheduled.specific.avro.reader=true
 # Configuring issuance event channel
 mp.messaging.outgoing.outgoing-issuance.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-issuance.topic=${ISSUANCE_EVENT_TOPIC}
-mp.messaging.outgoing.outgoing-issuance.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.outgoing-issuance.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+#mp.messaging.outgoing.outgoing-issuance.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-issuance.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-issuance.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.outgoing.outgoing-issuance.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.outgoing-issuance.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-issuance.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-issuance.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
 mp.messaging.outgoing.outgoing-issuance.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-issuance.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-issuance.value.registry.json.encode.empty=true
 
 
 # Configuring payment event channel
 mp.messaging.outgoing.outgoing-payment.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-payment.topic=${PAYMENT_EVENT_TOPIC}
-mp.messaging.outgoing.outgoing-payment.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.outgoing-payment.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-payment.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-payment.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.outgoing.outgoing-payment.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#mp.messaging.outgoing.outgoing-payment.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.outgoing-payment.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-payment.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-payment.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
 mp.messaging.outgoing.outgoing-payment.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-payment.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-payment.value.registry.json.encode.empty=true
 
 
 # Configuring dispute event channel
 mp.messaging.outgoing.outgoing-dispute.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-dispute.topic=${DISPUTE_EVENT_TOPIC}
-mp.messaging.outgoing.outgoing-dispute.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.outgoing-dispute.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-dispute.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-dispute.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
 mp.messaging.outgoing.outgoing-dispute.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-dispute.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-dispute.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
 mp.messaging.outgoing.outgoing-dispute.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-dispute.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-dispute.value.registry.json.encode.empty=true
 
 # Configuring disputeupdate event channel
 mp.messaging.outgoing.outgoing-disputeupdate.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-disputeupdate.topic=${DISPUTE_UPDATE_EVENT_TOPIC}
-mp.messaging.outgoing.outgoing-disputeupdate.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.outgoing-disputeupdate.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-disputeupdate.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
 #mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
 mp.messaging.outgoing.outgoing-disputeupdate.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
 mp.messaging.outgoing.outgoing-disputeupdate.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-disputeupdate.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-disputeupdate.value.registry.json.encode.empty=true
+
+# Configuring contraventions event channel
+mp.messaging.outgoing.outgoing-contraventions.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-contraventions.topic=${CONTRAVENTIONS_EVENT_TOPIC}
+mp.messaging.outgoing.outgoing-contraventions.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-contraventions.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+mp.messaging.outgoing.outgoing-contraventions.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-contraventions.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-contraventions.value.registry.json.encode.empty=true
 
 
 ## Configuring disputeupdate event channel
