--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -46,6 +46,7 @@ objects:
       PAYMENT_EVENT_TOPIC: ${PAYMENT_EVENT_TOPIC}
       DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
       DISPUTE_UPDATE_EVENT_TOPIC: ${DISPUTE_UPDATE_EVENT_TOPIC}
+      CONTRAVENTIONS_EVENT_TOPIC: ${CONTRAVENTIONS_EVENT_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -81,3 +82,4 @@ parameters:
   - name: PAYMENT_EVENT_TOPIC
   - name: DISPUTE_EVENT_TOPIC
   - name: DISPUTE_UPDATE_EVENT_TOPIC
+  - name: CONTRAVENTIONS_EVENT_TOPIC
