--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -169,17 +169,31 @@ mp.messaging.outgoing.outgoing-disputeupdate.specific.avro.reader=true
 mp.messaging.outgoing.outgoing-disputeupdate.value.registry.json.encode.empty=true
 
 # Configuring contraventions event channel
-mp.messaging.outgoing.outgoing-contraventions.connector=smallrye-kafka
-mp.messaging.outgoing.outgoing-contraventions.topic=${CONTRAVENTIONS_EVENT_TOPIC}
-mp.messaging.outgoing.outgoing-contraventions.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
-mp.messaging.connector.smallrye-contraventions.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.outgoing.outgoing-contraventions.connector=smallrye-kafka
+#mp.messaging.outgoing.outgoing-contraventions.topic=${CONTRAVENTIONS_EVENT_TOPIC}
+#mp.messaging.outgoing.outgoing-contraventions.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+#mp.messaging.connector.smallrye-contraventions.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+##mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.outgoing.outgoing-contraventions.ssl.protocol=${SSL_PROTOCOL}
+#mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.location=${SSL_TRUSTSTORE}
+#mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+#mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+#mp.messaging.outgoing.outgoing-contraventions.specific.avro.reader=true
+#mp.messaging.outgoing.outgoing-contraventions.value.registry.json.encode.empty=true
+
+
+# Configuring violations event channel
+mp.messaging.outgoing.outgoing-violations.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-violations.topic=${VIOLATIONS_EVENT_TOPIC}
+mp.messaging.outgoing.outgoing-violations.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-violations.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
 #mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
-mp.messaging.outgoing.outgoing-contraventions.ssl.protocol=${SSL_PROTOCOL}
-mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.location=${SSL_TRUSTSTORE}
-mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
-mp.messaging.outgoing.outgoing-contraventions.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
-mp.messaging.outgoing.outgoing-contraventions.specific.avro.reader=true
-mp.messaging.outgoing.outgoing-contraventions.value.registry.json.encode.empty=true
+mp.messaging.outgoing.outgoing-violations.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-violations.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-violations.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-violations.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-violations.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-violations.value.registry.json.encode.empty=true
 
 
 ## Configuring disputeupdate event channel
