--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -164,10 +164,10 @@ objects:
               secretKeyRef:
                 key: DISPUTE_UPDATE_EVENT_TOPIC
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
-          - name: CONTRAVENTIONS_EVENT_TOPIC
+          - name: VIOLATIONS_EVENT_TOPIC
             valueFrom:
               secretKeyRef:
-                key: CONTRAVENTIONS_EVENT_TOPIC
+                key: VIOLATIONS_EVENT_TOPIC
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
       output:
