--- a/.github/workflows/build_push_pr_onopen_devdeploy.yml
+++ b/.github/workflows/build_push_pr_onopen_devdeploy.yml
@@ -1,4 +1,4 @@
-name: [RECON-SVC]CD for recon-svc- release branch to devbranch(Deploy to Dev)
+name: RECON-svc-CD for recon-svc- release branch to devbranch(Deploy to Dev)
 on:
   pull_request:
     types: [opened, reopened,edited,synchronize]
